--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+# Application name
 spring.application.name=api-gateway
+
+# Disable Spring Cloud Config Server (if not in use)
+spring.cloud.config.enabled=false
+
+# Server port
+server.port=8072
+
+# Eureka Client Configuration
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Enable Service Discovery for Gateway
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+management.endpoints.web.exposure.include=gateway
+management.endpoint.health.show-details=always
+management.endpoint.gateway.access=unrestricted
+spring.main.web-application-type=reactive
+
+
+# Logging configuration
+logging.level.org.springframework.security=trace
+
+# Keycloak configuration for OAuth2 client
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.registration.keycloak.client-id=product-service
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/microservice-realm
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/microservice-realm
