Updated config file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Enable Service Discovery for Gateway
+spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials RETAIN_UNIQUE
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 management.endpoints.web.exposure.include=gateway
